[FIX] Remove scrollbar when showing the empty page

--- a/pos_empty_home/static/src/css/pos_empty_home.css
+++ b/pos_empty_home/static/src/css/pos_empty_home.css
@@ -5,7 +5,6 @@
 */
 
 .product-list-empty-home {
-    height: 80%;
     text-align: center;
     padding: 15%;
     font-size: x-large;
